token-exchange-proxy/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idp-proxy-rhsso
  namespace: sso-gateway
  labels:
    app: idp-proxy-rhsso
    app.kubernetes.io/part-of: sso-migration
    app.kubernetes.io/component: token-exchange-proxy
spec:
  selector:
    app: idp-proxy-rhsso
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: idp-proxy-rhbk
  namespace: sso-gateway
  labels:
    app: idp-proxy-rhbk
    app.kubernetes.io/part-of: sso-migration
    app.kubernetes.io/component: token-exchange-proxy
spec:
  selector:
    app: idp-proxy-rhbk
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
