token-exchange-proxy/06-route-rhsso.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: idp-proxy-rhsso
  namespace: sso-gateway
  labels:
    app: idp-proxy-rhsso
    app.kubernetes.io/part-of: sso-migration
  annotations:
    haproxy.router.openshift.io/timeout: 60s
spec:
  host: keycloak-rhsso.apps.cluster-nf2q4.dynamic2.redhatworkshops.io
  to:
    kind: Service
    name: idp-proxy-rhsso
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
